<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.RegisterActivity"
    android:background="@drawable/background_1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp">


        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            style="@style/CircularDeterminateProgressBar"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:text="@string/register"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"/>
        <EditText
            android:id="@+id/eT_Name"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:hint="@string/input_name"
            android:paddingLeft="20dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"/>
        <EditText
            android:id="@+id/eT_Email"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:hint="@string/input_email"
            android:paddingLeft="20dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"/>
        <EditText
            android:id="@+id/eT_Password"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:hint="@string/input_password"
            android:paddingLeft="20dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"/>
        <EditText
            android:id="@+id/eT_confirmPassword"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:hint="@string/input_repassword"
            android:paddingLeft="20dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_Register"
            android:text="@string/register"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/btn_back"
            android:text="@string/back"
            android:textSize="18sp"
            android:textColor="@color/blue_200"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:background="@drawable/button_background_2"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>
