<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@drawable/background_1">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="@style/CircularDeterminateProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    <TextView
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"/>
    <EditText
        android:id="@+id/eT_Email"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/btn_reset"
        android:text="@string/confirm"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/btn_back"
        android:text="@string/back"
        android:textSize="18sp"
        android:textColor="@color/blue_200"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:background="@drawable/button_background_2"
        android:layout_marginTop="10dp"/>

</LinearLayout>
