<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="16dp"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:text="Thay đổi mật khẩu" />
        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:textColor="@color/blue_400"
            android:layout_marginEnd="16dp"
            android:text="Xong" />
    </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="15dp">
        <EditText
            android:id="@+id/old_pass"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:hint="@string/old_pass"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/new_pass"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:hint="@string/new_pass"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/renew_pass"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:hint="@string/renew_pass"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>

    </LinearLayout>






</LinearLayout>