<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_100"
    tools:context=".activity.EditProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="360dp"
                        android:background="@drawable/profile_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <ImageView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/back"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/circle_avatar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="Name"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/profile_image"
                        app:layout_constraintStart_toStartOf="@+id/profile_image"
                        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="name@email.com"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="@+id/profile_name"
                        app:layout_constraintStart_toStartOf="@+id/profile_name"
                        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="24dp"
                        android:background="@drawable/white_background"
                        android:elevation="3dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/profile_email">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">




                        </LinearLayout>
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:layout_weight="1"
                                android:textStyle="bold"
                                android:text="@string/password"
                                android:textColor="@color/pink_300"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="18sp"
                                android:textAlignment="viewEnd"
                                android:text="Password" />
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="10dp"
                            android:background="@color/black" />
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:layout_weight="1"
                                android:text="@string/phone_number"
                                android:textStyle="bold"
                                android:textColor="@color/pink_300"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="18sp"
                                android:textAlignment="viewEnd"
                                android:text="phone number" />
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="10dp"
                            android:background="@color/black" />
                        <LinearLayout
                            android:layout_margin="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:layout_weight="1"
                                android:text="@string/level"
                                android:textStyle="bold"
                                android:textColor="@color/pink_300"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textSize="18sp"
                                android:textAlignment="viewEnd"
                                android:text="level" />
                        </LinearLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="6dp"
                            android:layout_marginTop="6dp"
                            android:layout_marginStart="10dp"
                            android:background="@color/black" />

                        <Button
                            android:id="@+id/btn_back"
                            android:text="@string/save"
                            android:layout_gravity="center"
                            android:textSize="18sp"
                            android:textColor="@color/white"
                            android:layout_width="300dp"
                            android:layout_height="60dp"
                            android:background="@drawable/button_background"
                            android:layout_marginTop="150dp"/>
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>